fixed mobile menu overflow for third-level items

--- a/scss-css/component/nav/main.scss
+++ b/scss-css/component/nav/main.scss
@@ -18,12 +18,12 @@
         left: auto;
         right: 0;
         @include max($breakpoint--l) {
-          right: auto;
+          right: auto !important;
         }
         &.menu--level-2 {
           right: 100%;
           @include max($breakpoint--l) {
-            right: auto;
+            right: auto !important;
           }
         }
       }
@@ -57,7 +57,7 @@
         @include max($breakpoint--l) {
           border-top: 1px solid $border;
           box-shadow: none;
-          left: auto;
+          left: auto !important;
           padding: 0;
           position: relative;
           top: auto;
